# ProgramViz

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  README_EN.md  SECURITY.md  THIRD_PARTY_NOTICES.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
doc/: PROGRESS.md  README_DEV.md  RELEASE_CHECKLIST.md  STABILITY_PORTABILITY_REVIEW.md  WORKFLOW.md
scripts/: check-version.cmake
src/: appearancesettingsdialog.cpp  appearancesettingsdialog.h  hsipalettedialog.cpp  hsipalettedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  projectmodel.cpp  projectmodel.h  treemapview.cpp  treemapview.h  visualsettings.cpp  visualsettings.h
tests/: projectmodel_test.cpp
